--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* html {
+  font-family: Menlo, Monaco, Lucida Console, "Courier New", Courier, monospace;
+  background: #fff;
+} */
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
