feat: Requerimientos creados según prueba tecnica

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-header />
 
-<router-outlet />
+<div class="container max-w-full pt-[88px]">
+  <router-outlet />
+</div>
 
-<app-footer />
+<app-footer class="mt-auto"/>
