--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,27 +1,27 @@
-<footer class="bg-white rounded-lg shadow dark:bg-gray-900 m-4">
+<footer class="bg-green-900 shadow">
   <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
     <div class="sm:flex sm:items-center sm:justify-between">
-      <a href="https://flowbite.com/" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
-        <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
-        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+      <a [routerLink]="['/home']" class="flex items-center mb-4 sm:mb-0 space-x-3">
+        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">
+          Liga Oriental
+        </span>
       </a>
-      <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400">
+      <ul class="sm:block md:flex flex-wrap items-center mb-6 text-sm font-medium 
+          text-green-500 sm:mb-0 dark:text-green-400">
         <li>
-          <a href="#" class="hover:underline me-4 md:me-6">About</a>
-        </li>
-        <li>
-          <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
-        </li>
-        <li>
-          <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
-        </li>
-        <li>
-          <a href="#" class="hover:underline">Contact</a>
+          <button type="button" class="text-green-700 text-base hover:text-white border 
+            border-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 
+            font-medium rounded-lg px-6 py-3.5 text-center dark:border-green-500 dark:text-green-500 
+            dark:hover:text-white dark:hover:bg-green-600 dark:focus:ring-green-800 w-full"
+            [routerLink]="['/auth']">Ingresar
+          </button>
         </li>
       </ul>
     </div>
-    <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
-    <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="https://flowbite.com/"
-        class="hover:underline">Flowbite™</a>. All Rights Reserved.</span>
+    <hr class="my-6 border-green-200 sm:mx-auto dark:border-green-700 lg:my-8" />
+    <span class="block text-sm text-white sm:text-center dark:text-white">
+      © 2024 All Rights Reserved to
+      <a href="https://github.com/McastilloA" target="_blank" class="hover:underline">&#64;mcastleVerse</a>
+    </span>
   </div>
 </footer>
